// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  textAlign="center"
>
  <ForwardRef(ShareButton-facebook)
    title="【xxx】
xxx"
    url="https://xxx.com"
  >
    <Icon
      bgStyle={Object {}}
      borderRadius={0}
      iconFillColor="white"
      round={true}
      size={50}
    />
  </ForwardRef(ShareButton-facebook)>
  <ForwardRef(ShareButton-twitter)
    title="【xxx】
xxx"
    url="https://xxx.com"
  >
    <Icon
      bgStyle={Object {}}
      borderRadius={0}
      iconFillColor="white"
      round={true}
      size={50}
    />
  </ForwardRef(ShareButton-twitter)>
  <ForwardRef(ShareButton-line)
    title="【xxx】
xxx"
    url="https://xxx.com"
  >
    <Icon
      bgStyle={Object {}}
      borderRadius={0}
      iconFillColor="white"
      round={true}
      size={50}
    />
  </ForwardRef(ShareButton-line)>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests long description 1`] = `
<ForwardRef(Box)
  textAlign="center"
>
  <ForwardRef(ShareButton-facebook)
    title="【日本語付きtitle】
long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-lo..."
    url="https://xxx.com"
  >
    <Icon
      bgStyle={Object {}}
      borderRadius={0}
      iconFillColor="white"
      round={true}
      size={50}
    />
  </ForwardRef(ShareButton-facebook)>
  <ForwardRef(ShareButton-twitter)
    title="【日本語付きtitle】
long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-lo..."
    url="https://xxx.com"
  >
    <Icon
      bgStyle={Object {}}
      borderRadius={0}
      iconFillColor="white"
      round={true}
      size={50}
    />
  </ForwardRef(ShareButton-twitter)>
  <ForwardRef(ShareButton-line)
    title="【日本語付きtitle】
long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-long-text-lo..."
    url="https://xxx.com"
  >
    <Icon
      bgStyle={Object {}}
      borderRadius={0}
      iconFillColor="white"
      round={true}
      size={50}
    />
  </ForwardRef(ShareButton-line)>
</ForwardRef(Box)>
`;
